# DocuFlow

./: .gitignore  README.md  justfile  main.py  pyproject.toml
chroma_test/: chroma.sqlite3
notes/: batch_size.md  pydantic.md  rag.md  text_embeddings.md
notes/data-procesing/: dp.md
notes/data-sources/: soure.md
notes/data-storage/: db.md
notes/query-processing/: qp.md
notes/validation/: vldt.md
src/: config.py  ingestion.py  main.py
src/core/: ingestion.py  main.py
src/core/ingestion/: chunking.py  conversion.py  ingestion_pipeline.py
src/docuflow/: main.py
src/docuflow/configs/: __init__.py  settings.py
src/docuflow/core/ingestion/: __init__.py  chunking.py  conversion.py  ingestion_pipeline.py
src/docuflow/core/loaders/: __init__.py  base_loader.py  code_loader.py  document_loader.py  image_loader.py  loader_factory.py  spreadsheet_loader.py
src/docuflow/core/processing/parsers/: document_parser.py  ocr_extractor.py
src/docuflow/core/providers/: embedding_provider.py
src/docuflow/interfaces/: __init__.py  loader.py  retriever.py  text_embedder.py  vector_store.py
src/docuflow/schemas/: __init__.py  chunk.py  document.py  raw_document.py  retrieved_chunk.py
src/docuflow/services/: __init__.py  bge_text_embedder.py  chroma_vector_store.py  embedding_service.py  retriever_chain.py  vector_store_service.py
src/docuflow/utils/: __init__.py  bootstrap.py  document_helper.py  id_generator.py  load_fie.py  logger.py  settings.py
src/schemas/: chunk.py  document.py
src/services/: embedding_service.py  vector_store_service.py
src/utils/: chunking.py  config.py  debug_md.py  load_fie.py  logger.py  settings.py
test/: test_embedding_service.py  test_similarity.py
tests/: test_embedding_service.py  test_retriever.py  test_similarity.py  test_vector_store.py
tests/DataSourceLayer/: test_document_loader.py
